# mark_as_read

./: .gitignore  Cargo.toml  README.md
examples/: try.rs
src/: app.rs  auth.rs  config.rs  from.rs  json_parse.rs  main.rs  message.rs  request.rs
src/events/: events.rs  mod.rs
src/request/: client.rs  g_auth.rs  g_client.rs  list.rs  message.rs  message_list.rs  metadata.rs  mod.rs  secret.rs
src/terminal/: render.rs
src/util/: mod.rs
