[package]
name = "mark_as_read"
version = "0.1.0"
authors = ["originbenntou <originbenntou8973@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.0"
url = "2.2.2"
anyhow = "1.0.40"
